Remove unused input property from selection register component in landing page

--- a/src/app/v2/modules/landing-page/landing-page.component.html
+++ b/src/app/v2/modules/landing-page/landing-page.component.html
@@ -15,7 +15,7 @@
   </app-title-section>
 </section>
 <!--Section registro-->
-<app-selection-register [changeMeta]="false" [cards]="cards"></app-selection-register>
+<app-selection-register></app-selection-register>
 <!-- Section podcasts-->
 <section class="bg-gradient-to-br from-yellow-500/90 to-yellow-400/80 py-16">
   <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
