--- a/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
+++ b/src/app/v2/modules/evaluaciones-madurez/evaluaciones-madurez.component.html
@@ -270,7 +270,7 @@
         
         <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
           <!-- Puntaje General -->
-          <div class="bg-gradient-to-br from-blue-50 to-blue-100 rounded-lg p-5 border border-blue-200 shadow-sm">
+          <div class=" rounded-lg p-5 border border-blue-200 shadow-sm">
             <div class="flex items-center justify-between mb-3">
               <h4 class="text-lg font-semibold text-gray-800">Puntaje General</h4>
               <span class="text-2xl font-bold text-blue-700">{{ modeloMadurez()?.puntaje_general | number:'1.1-1' }}</span>
