--- a/src/app/v2/modules/login/login.component.html
+++ b/src/app/v2/modules/login/login.component.html
@@ -1,5 +1,5 @@
 <!-- login.component.html -->
-<div class="min-h-screen bg-gradient-to-br from-blue-50 to-blue-100 flex">
+<div class="min-h-screen  flex">
   <!-- Left side - Login Form -->
   <div class="w-full lg:w-1/2 flex items-center justify-center p-8">
     <div class="w-full max-w-md">
@@ -193,7 +193,7 @@
       alt="Login Background" 
       class="absolute inset-0 w-full h-full object-cover"
     />
-    <div class="absolute inset-0 bg-gradient-to-r from-blue-900/80 to-blue-900/40 flex items-center justify-center">
+    <div class="absolute inset-0 bg-gradient-to-r from-blue-900/80 to-black-900/40 flex items-center justify-center">
       <div class="text-center p-8">
         
         <h2 class="text-3xl font-bold text-white mb-4">Bienvenido a Nuevo Los Lagos</h2>
